# Multi-SCA

./: .gitignore  DEPLOY_LINUX.md  README.md  pyproject.toml  sca.py
SCA/js_sca/project/project/: Runner  pom.xml
SCA/rust_sca/testcases/rust-vuln-wasmtime-gix/: README.md
SCA/rust_sca/testcases/vulndem/: Cargo.toml
SCA/uv_sca/SCA_java_package/: README.md  pom.xml
results/javascript/.work/javascript_20251230_131153/: sbom.json
results/javascript/.work/javascript_20251230_131210/: sbom.json
results/javascript/.work/rich_npm_20251230_131622/: nbtosbom.stderr.txt  nbtosbom.stdout.txt  sbom.json
results/javascript/.work/rich_npm_20251230_132020/: nbtosbom.stderr.txt  nbtosbom.stdout.txt  sbom.json
results/javascript/.work/rich_npm_20251230_132027/: nbtosbom.stderr.txt
results/javascript/.work/rich_npm_20251230_135223/: nbtosbom.stderr.txt  sbom.json
results/javascript/.work/sample_npm_20251230_130714/: nbtosbom.stderr.txt
results/javascript/.work/sample_npm_20251230_130833/: nbtosbom.stderr.txt  sbom.json
results/javascript/.work/sample_npm_20251230_132158/: nbtosbom.stderr.txt  sbom.json
results/javascript/javascript/20251230_131153/: nbtosbom.stderr.txt  nbtosbom.stdout.txt
results/javascript/javascript/20251230_131211/: nbtosbom.stderr.txt  nbtosbom.stdout.txt
results/python/uvtest/20251230_121810/: sbom.json  (+2 more)
sca_tools/: __init__.py  base.py  registry.py  utils.py
sca_tools/analyzers/: __init__.py  javascript_npm.py  python_pyproject.py  rust_cargo.py
test_project/java/sample_maven/: pom.xml
test_project/javascript/rich_npm/: index.js  package-lock.json  package.json
test_project/javascript/sample_npm/: index.js  package-lock.json  package.json
test_project/python_sample/: main.py  pyproject.toml
test_project/rust/rust-vuln-wasmtime-gix/: Cargo.toml
test_project/uvtest/: main.py  pyproject.toml
unified_sca/: __init__.py  cdx.py  cli.py  detect.py  shell.py  zip_utils.py
unified_sca/runners/: __init__.py  javascript_runner.py  python_uv_runner.py  rust_runner.py
(+52 files in other folders)
