[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sca-wrapper"
version = "0.1.0"
description = "Unified SCA CLI wrapper (detect/scan) with pure-Python analyzers for Rust, Python and JavaScript."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "tomli; python_version<'3.11'",
]

[project.scripts]
sca = "unified_sca.cli:main"

[tool.setuptools]
packages = { find = { include = ["unified_sca*", "sca_tools*"] } }


