[package]
name = "vulndem"
version = "0.1.0"
edition = "2024"

[dependencies]
# 1. RUSTSEC-2020-0071: time crate segfault
# 这是一个非常著名的漏洞，广泛影响旧生态
time = "=0.1.42"

# 2. RUSTSEC-2023-0044: h2 crate 拒绝服务 (DoS)
# 影响了很多 web 框架
h2 = "=0.3.16"

# 3. RUSTSEC-2022-0093: regex 拒绝服务 (ReDoS)
regex = "=1.5.4"

# 4. RUSTSEC-2021-0145: atty 在 Windows 上可能的资源泄露
atty = "=0.2.13"